Fix for name, delete overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  overflow: hidden;
   background: linear-gradient(#CB356B, #BD3F32);
 }
 
